# REDMI2

./: README.md  api_tools.js  app.json  package.json  webpack.config.js
backend/: index.js  package-lock.json  package.json
frontend/: App.js  api_tools.js  app.json  package-lock.json  package.json
frontend/.expo/: settings.json
ros_ws/roswebserver/: CMakeLists.txt  package.xml
ros_ws/roswebserver/roswebserver/: aksjdbnas.py  server.py
